Fixed the terminally deprecated method warning when signing MSI files with Java 23+ (Fixes #330)